--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Lights Out Game</title>
+<link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<div id="gameBoard" class="board">
+  <!-- JavaScript will populate the game board here -->
+</div>
+
+<script src="script.js"></script>
+
+</body>
+</html>
