--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 </head>
 <body>
 
-<div id="gameBoard" class="board">
-  <!-- JavaScript will populate the game board here -->
+<div class="container">
+  <h1>Lights Out</h1>
+  <div id="gameBoard" class="board">
+    <!-- JavaScript will populate the game board here -->
+  </div>
 </div>
 
 <script src="script.js"></script>
