--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   </div>
 </div>
 
+<div class="addendum-container">
+  <h2>Addendum</h2>
+  <p id="addendum-content">
+    <!-- You can write your process, creative choices, challenges, and insights here. -->
+    Describe your process and creative choices along with any challenges faced and how you overcame them, including insights gained during this process.
+  </p>
+</div>
+
 <script src="script.js"></script>
 
 </body>
