--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 <div class="container">
   <h1>Lights Out</h1>
   <div id="gameBoard" class="board">
-    <!-- JavaScript will populate the game board here -->
   </div>
 </div>
 
 <div class="addendum-container">
   <h2>Addendum</h2>
   <p id="addendum-content">
-    <!-- You can write your process, creative choices, challenges, and insights here. -->
-    Describe your process and creative choices along with any challenges faced and how you overcame them, including insights gained during this process.
+  Creating the lights out game was moderately challenging, I had to first think how I would start this project. Looking into the instructions it says to start with just making one tile that changes color when you click on it. After this I had to handle the events of the other tiles touching that one. I hit a few road bumps in the process and had to debug using the terminal on the website. Once I got the game to work I tested whether the output of winning would work so I had to beat it. This also took a little effort, but once I was sure that the game worked, I centered it on the middle of the screen and created the title. Lastly, I had to make the addendum, doing this wasn't hard, but lining it up under the gameboard took a little longer than expected. After logging my challenges in this addendum I completed the assignment! 
   </p>
 </div>
 
